# get-me-a-roof

./: .gitignore  README.md  pyproject.toml
shelter/: cli.py  server.py
shelter/core/: parse.py  validators.py
