[tool.poetry]
name = "Shelter"
version = "0.1.0"
description = ""
authors = ["Max Vieweg <max.vieweg@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "shelter" }]
repository = "https://github.com/DSMaVie/get-me-a-roof"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
typer = "^0.10.0"
beautifulsoup4 = "^4.12.3"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
